fix GPU transfer layer step for jumps

--- a/extensions/amp-video-docking/0.1/amp-video-docking.css
+++ b/extensions/amp-video-docking/0.1/amp-video-docking.css
@@ -116,7 +116,7 @@
 
 .amp-video-docked-shadow {
   box-shadow: 0px 0 20px 6px rgba(0, 0, 0, 0.2);
-  transition-property: opacity, transition !important;
+  transition-property: transform, opacity !important;
 }
 
 .amp-video-docked-controls-bg {
@@ -180,6 +180,7 @@
 .amp-video-docked-controls,
 .i-amphtml-video-docked,
 .i-amphtml-video-docked-overlay {
+  position: fixed !important;
   top: 0 !important;
   left: 0 !important;
   right: auto !important;
@@ -194,6 +195,9 @@
   transform-origin: left top !important;
 
   will-change: width, height, transition, transform, opacity;
+
+  /* Needs an arbitrary transition by default so browser won't glitch/jump. */
+  transition: 0.05s transform;
 }
 
 .amp-video-docked-controls {
